added first pages list

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -19,4 +19,4 @@
 // Add your own components and import them like this:
 //
 // @import "components/my_new_component";
-@import "components/base"
+@import "components/base";
