--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -79,3 +79,13 @@ body {
   @apply font-bold;
   @apply mt-2;
 }
+
+.current-counter-container {
+  @apply text-gray-800;
+  @apply text-sm;
+  .current-counter {
+    @apply text-sm;
+    @apply text-gray-800;
+    @apply font-bold;
+  }
+}
