--- a/src/css/components/dark_mode.scss
+++ b/src/css/components/dark_mode.scss
@@ -56,4 +56,13 @@
     @apply font-bold;
     @apply mt-2;
   }
+  .current-counter-container {
+    @apply text-sm;
+    @apply text-gray-300;
+    .current-counter {
+      @apply text-sm;
+      @apply text-gray-300;
+      @apply font-bold;
+    }
+  }
 }
