fixed first subnav for domains

--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -31,7 +31,8 @@ body {
 
 .gradient-color {
   //background-color: #E2EDF3;
-  @apply bg-gray-300;
+  @apply bg-white;
+  @apply shadow-md;
 }
 
 .stats-bg {
