Redesign navbar and structure in domain pages (#49)
* fixed first subnav for domains

* hiding period dropdown when needed

also fixed so tracking info card is shown if no data is found

* added link to reports in the tab menu for domains

* fixed period url

* fixed some design in tab menu and dropdown

* removed border bottom on tab-menu

* fixed api test

* check so not becoming admin on api

--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -31,7 +31,8 @@ body {
 
 .gradient-color {
   //background-color: #E2EDF3;
-  @apply bg-gray-300;
+  @apply bg-white;
+  @apply shadow-md;
 }
 
 .stats-bg {
@@ -44,6 +45,10 @@ body {
 
 .transister {
   transition: ease background 0.2s;
+}
+
+.transister-menu {
+  transition: border-color .2s ease-in;
 }
 
 .card {
