--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -16,13 +16,14 @@ h3 {
 }
 
 body {
+  //background-color: #F8F7FA;
   @apply bg-gray-100;
 }
 
 .nav {
   margin-bottom: -17px !important;
   @apply pb-2;
-  @apply bg-white;
+  //@apply bg-white;
 
   a {
     @apply text-black;
@@ -31,8 +32,12 @@ body {
 
 .gradient-color {
   //background-color: #E2EDF3;
-  @apply bg-white;
-  @apply shadow-md;
+  //@apply bg-white;
+  //@apply shadow-md;
+}
+
+.bg-button {
+  background-color: #eceff1;
 }
 
 .stats-bg {
@@ -72,7 +77,7 @@ body {
 }
 
 .progress_bar {
-  @apply bg-blue-200;
+  @apply bg-blue-100;
   @apply rounded;
 }
 .label {
