--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -20,7 +20,16 @@ body {
   @apply bg-gray-100;
 }
 
+.bg-menu-button {
+  background-color: #F5F5F5;
+  color: #293241;
+  &:hover {
+    background-color: #F8F8F8;
+  }
+}
+
 .nav {
+  background-color: white;
   margin-bottom: -17px !important;
   @apply pb-2;
   //@apply bg-white;
@@ -31,7 +40,8 @@ body {
 }
 
 .gradient-color {
-  //background-color: #E2EDF3;
+  background-color: #2B5AA8;
+  color: white;
   //@apply bg-white;
   //@apply shadow-md;
 }
@@ -72,8 +82,13 @@ body {
 .big_letters {
   @apply w-full;
   @apply mb-4;
-  @apply text-gray-800;
+  @apply text-white;
   @apply p-1;
+  padding-bottom: 10rem;
+}
+
+.poper {
+  margin-top: -10rem;
 }
 
 .progress_bar {
@@ -91,11 +106,11 @@ body {
 }
 
 .current-counter-container {
-  @apply text-gray-800;
+  @apply text-white;
   @apply text-sm;
   .current-counter {
     @apply text-sm;
-    @apply text-gray-800;
+    @apply text-white;
     @apply font-bold;
   }
 }
