--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -75,6 +75,11 @@ body {
   @apply px-2;
   @apply py-1;
 }
+@media (min-width: 768px) {
+  .md\:sb-pl {
+    padding-left: 20rem !important;
+  }
+}
 
 .big_letters {
   @apply w-full;
