fixed upgrade and success page and all

--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -51,7 +51,7 @@ body {
 }
 
 .transister-menu {
-  transition: border-color .2s ease-in;
+  transition: border-color .2s ease-in, color .2s ease-in;
 }
 
 .blue-numbers {
