--- a/src/css/components/flash.scss
+++ b/src/css/components/flash.scss
@@ -15,8 +15,8 @@
 }
 
 .flash-info {
-  @apply text-gray-800;
-  @apply bg-white;
+  @apply text-yellow-800;
+  @apply bg-yellow-100;
   @apply p-2;
   @apply rounded-sm;
   @apply mb-2;
