--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -11,7 +11,8 @@ h3 {
 
 body {
   //background-color: #F8F7FA;
-  @apply bg-white;
+  //@apply bg-white;
+  background-color: rgba(248, 250, 252, 0.5);
 }
 
 .bg-menu-button {
@@ -65,7 +66,7 @@ body {
   @apply bg-white;
   @apply text-black;
   @apply border;
-  @apply border-gray-200;
+  border-color: #E6EBF1;
   @apply p-4;
 
   a {
@@ -126,4 +127,14 @@ body {
   @apply bg-cool-gray-50;
   @apply text-gray-300;
   @apply cursor-not-allowed;
+}
+.border-kind-gray {
+  border-color: #E6EBF1;
+}
+.bg-kind-gray {
+  background-color: #E6EBF1;
+}
+
+.bg-kind-light-gray {
+  background-color: rgba(248, 250, 252, 0.5);
 }
