--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -62,7 +62,7 @@ body {
   @apply bg-white;
   @apply text-black;
   @apply border;
-  border-color: #E6EBF1;
+  @apply border-kind-gray;
   @apply p-4;
 
   a {
@@ -84,9 +84,7 @@ body {
 
 .big_letters {
   @apply w-full;
-  @apply mb-4;
   @apply text-gray-900;
-  @apply p-1;
 }
 
 .poper {
