--- a/src/css/components/base.scss
+++ b/src/css/components/base.scss
@@ -71,8 +71,7 @@ body {
 }
 .mini-card {
   @apply rounded-md;
-  @apply border;
-  @apply border-gray-200;
+  @apply bg-kind-black;
   @apply px-2;
   @apply py-1;
 }
